# benchmarking_sets

./: CMakeLists.txt  README.md  common.h  copy.cc  draw_results.py  erase_bulk.cc  erase_by_one.cc  input_generators.h  insert_f_l_bench.cc  lookup_speed_in_cache.cc  lookup_speed_out_of_cache.cc  range_construction.cc
docs/: benchmark_visualization.js  index.html
docs/computed_jsons/: absl_hash.json  boost_insert_f_l.json  copy_fake_url_absl.json  copy_fake_url_boost.json  copy_fake_url_srt.json  copy_fake_url_std.json  copy_fake_url_std_unordered.json  copy_int_absl.json  copy_int_boost.json  copy_int_srt.json  copy_int_std.json  copy_int_std_unordered.json  erase_bulk_int_absl.json  erase_bulk_int_baseline_absl.json  erase_bulk_int_baseline_boost.json  erase_bulk_int_baseline_srt.json  erase_bulk_int_baseline_std.json  erase_bulk_int_baseline_std_unordered.json  erase_bulk_int_boost.json  erase_bulk_int_srt.json  erase_bulk_int_std.json  erase_bulk_int_std_unordered.json  insert_first_last_int_absl.json  insert_first_last_int_baseline_absl.json  insert_first_last_int_baseline_boost.json  insert_first_last_int_baseline_srt.json  insert_first_last_int_baseline_std.json  insert_first_last_int_baseline_std_unordered.json  insert_first_last_int_boost.json  insert_first_last_int_srt.json  insert_first_last_int_std.json  insert_first_last_int_std_unordered.json  lookup_speed_in_cache_fake_url_absl.json  lookup_speed_in_cache_fake_url_boost.json  lookup_speed_in_cache_fake_url_srt.json  lookup_speed_in_cache_fake_url_std.json  lookup_speed_in_cache_fake_url_std_unordered.json  (+20 more)
(+1 files in other folders)
